ws-alunos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-alunos
  labels:
    app: ws-alunos
spec:
  selector:
    matchLabels:
      app: ws-alunos    
  replicas: 3
  template:
    metadata:
      labels:
        app: "ws-alunos"
    spec:
      containers:
        - name: ws-alunos
          image: "lucassilvasg1/ws-alunos:1"

          resources:
            requests: 
              cpu: "0.1"
              memory: 100Mi
            limits:
              cpu: "0.1"
              memory: 150Mi
