service-alunos.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-alunos-service
spec:
  selector:
    app: ws-alunos
  type: ClusterIP
  ports:
  - name: ws-alunos-service
    port: 8080
    targetPort: 8090
    protocol: TCP
