service-cursos.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-cursos-service
spec:
  selector:
    app: ws-cursos
  type: ClusterIP
  ports:
  - name: ws-cursos
    port: 8081
    targetPort: 8080
    protocol: TCP
